--- a/public/scss/modules/_index.scss
+++ b/public/scss/modules/_index.scss
@@ -32,6 +32,9 @@
 /*===== Import images =====*/
 @import "images";
 
+/*===== Import image overlay =====*/
+@import "image-overlay";
+
 /*===== Import layers =====*/
 @import "layers";
 
