--- a/public/scss/modules/_images.scss
+++ b/public/scss/modules/_images.scss
@@ -16,15 +16,11 @@
   @include m(project-preview) {
     @extend %dim-actn;
     @extend %img-hlpr;
-    background-color: rgba(0, 0, 0, 0.05);
-    border-radius: $br--default;
-    margin-top: rem(20px);
-    min-width: rem(260px);
-    transition: opacity $trnstn-quick;
+    @extend %prjct-img;
 
     @include medq(split-md) {
+      width: 340px;
       // margin: rem(160px) auto;
-      max-width: 340px;
       margin-bottom: rem(80px);
     }
 
@@ -36,12 +32,25 @@
 
   }
 
-  // @include m(hero) {
+  @include m(project-process) {
+    cursor: pointer;
+    @extend %img-hlpr;
+    @extend %prjct-img;
 
-  //   @media (min-width: 769px) {
-  //     margin-bottom: rem(42px);
-  //   }
+    @include medq(split-md) {
+      // margin: rem(160px) auto;
+      vertical-align: middle;
+      width: 340px;
+      margin-bottom: rem(80px);
+    }
 
-  // }
+    @include medq(split-sm) {
+      display: block;
+      width: 450px;
+      margin: 0 auto;
+      // max-width: 100vw;
+    }
+
+  }
 
 }
