--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1547,20 +1547,16 @@ p, .para-primary, .para-primary--grouped {
 /**** VIDEOS
 *=======================================================================*/
 .vid {
-  width: 17.8125rem;
-  height: 31.1875rem; }
-  @media (min-width: 1100px) {
+  height: auto; }
+  @media (min-width: 769px) {
     .vid {
-      margin-bottom: 3.125rem; } }
-  @media (min-width: 1px) and (max-width: 768px) {
-    .vid {
+      width: 16.625rem;
       margin-bottom: 3.125rem; } }
   @media (min-width: 1px) and (max-width: 768px) {
     .vid {
       display: block;
-      margin: 0 auto;
-      max-width: 100vw;
-      margin-bottom: 3.125rem; } }
+      margin: 3.125rem auto;
+      max-width: 100vw; } }
 
 /*===== Import states =====*/
 /*_index.scss*/
