--- a/public/scss/utilities/_config.scss
+++ b/public/scss/utilities/_config.scss
@@ -82,7 +82,7 @@ $ui-colors: (
   info                    : $sorta_dark-burgundy,
   missing                 : $blue-charcoal,
   success                 : $jungle-green,
-  warning                 : $guardsman-red
+  warm                    : $guardsman-red
 );
 
 /*===== Color palette modifiers map =====*/
