--- a/public/scss/modules/_images.scss
+++ b/public/scss/modules/_images.scss
@@ -20,7 +20,7 @@
     @extend %prjct-prvw-img;
 
     @include medq(split-md) {
-      width: 340px;
+      width: rem(390px);
       // margin: rem(160px) auto;
       margin-bottom: rem(80px);
     }
@@ -28,6 +28,7 @@
     @include medq(split-sm) {
       display: block;
       margin: 0 auto;
+      width: rem(500px);
       // max-width: 100vw;
     }
 
@@ -42,13 +43,13 @@
     @include medq(split-md) {
       // margin: rem(160px) auto;
       vertical-align: middle;
-      width: 340px;
+      width: rem(370px);
       margin-bottom: rem(80px);
     }
 
     @include medq(split-sm) {
       display: block;
-      width: 450px;
+      width: rem(475px);
       margin: 0 auto;
       // width: 100vw;
     }
