Final MVP push, begin filling in text-content, add certificates

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -108,6 +108,7 @@
 /*===== Font sources =====*/
 /*===== Font stacks =====*/
 /*===== Font weights =====*/
+/*===== Awesome Font icons =====*/
 /*===== Descriptive true-base colors =====*/
 /*===== Descriptive approximate-base colors =====*/
 /*===== Color usage =====*/
