--- a/public/scss/utilities/_config.scss
+++ b/public/scss/utilities/_config.scss
@@ -24,7 +24,7 @@ $font-weight--ultra-bold  : 800;
 $font-weight--heavy       : 900;
 
 /*===== Awesome Font icons =====*/
-$fa-font-path             : "../images/icons/font-awesome/scss/_variables.scss";
+// $fa-font-path             : "../images/icons/font-awesome/scss/_variables.scss";
 
 /*===== Descriptive true-base colors =====*/
 $transparent              : transparent;
