--- a/public/scss/utilities/_config.scss
+++ b/public/scss/utilities/_config.scss
@@ -85,7 +85,14 @@ $ui-colors: (
   info                    : $sorta_dark-burgundy,
   missing                 : $blue-charcoal,
   success                 : $jungle-green,
-  warm                    : $guardsman-red
+  warm                    : $guardsman-red,
+
+  un                      : $milano-red,
+  deux                    : $sun-glow,
+  trois                   : $havelock-blue,
+  quatre                  : $purple-heart,
+  cinq                    : $jungle-green,
+  six                     : $tango
 );
 
 /*===== Color palette modifiers map =====*/
