--- a/public/scss/modules/_paragraphs.scss
+++ b/public/scss/modules/_paragraphs.scss
@@ -19,3 +19,19 @@
   }
 
 }
+
+.flyer-main {
+
+  .para {
+
+    &-primary {
+
+      @include medq(split-sm) {
+        text-align: center;
+      }
+
+    }
+
+  }
+
+}
