--- a/public/scss/modules/_extends.scss
+++ b/public/scss/modules/_extends.scss
@@ -323,7 +323,7 @@
 
 /*===== Item-on features =====*/
 %item-on-hghlght {
-  color: palette(grey, x-light);
+  color: palette(grey, xx-light);
 }
 
 %item-on-undrln {
