--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1145,7 +1145,7 @@ h3, .headline-tertiary, .headline-tertiary--grouped {
 
 /*===== Item-on features =====*/
 .nav__item a:hover, .nav__item--current a {
-  color: #c0c3c5; }
+  color: #d8dadb; }
 
 .nav__item a:hover, .nav__item--current a {
   border-color: #009DC4; }
@@ -1314,16 +1314,16 @@ p, .para-primary, .para-primary--grouped {
   /*===== Close icon =====*/
   /*===== Font-Awesome icons =====*/ }
   .icn--nav-toggle {
-    width: 25px;
-    height: 17px;
-    border-top: solid 3px #8e9297;
-    border-bottom: solid 3px #8e9297;
+    width: 1.5625rem;
+    height: 1.0625rem;
+    border-top: solid 0.1875rem #8e9297;
+    border-bottom: solid 0.1875rem #8e9297;
     position: relative; }
     .icn--nav-toggle:before {
       height: 3px;
       width: 25px;
       background: #8e9297;
-      top: 4px; }
+      top: 0.25rem; }
   .icn--close {
     background-image: url("../images/icn-close.svg");
     background-repeat: no-repeat;
@@ -1358,7 +1358,7 @@ ul.icon-party {
       margin: 0 auto; } }
   ul.icon-party li {
     display: inline-block;
-    padding: 0.5rem; }
+    padding: 0.375rem; }
     ul.icon-party li .icn--fntawsm {
       border-radius: 0.25rem;
       border: solid 0.0625rem #31353F;
@@ -1402,7 +1402,7 @@ ul.icon-party {
           width: 8.8125rem;
           height: 8.8125rem;
           line-height: 8.8125rem;
-          font-size: 7.21875rem; } }
+          font-size: 6.60938rem; } }
       @media (min-width: 1px) and (max-width: 768px) {
         ul.icon-party li .icn--fntawsm {
           width: 7.5rem;
