Move Flyer Link, modify  what is contained in sections, remove header links to index from all but the Flyer page

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1675,6 +1675,9 @@ ul.icon-party {
   .overscroll p {
     padding: 0.9375rem; }
 
+li .overscroll {
+  margin-bottom: 12.5rem; }
+
 /*===== Import videos =====*/
 /*_videos.scss*/
 /**** VIDEOS
