--- a/public/scss/utilities/_config.scss
+++ b/public/scss/utilities/_config.scss
@@ -1,4 +1,4 @@
-/*_config.scss*/
+// _config.scss
 
 /**** GLOBAL CONFIGURATION
 *=======================================================================*/
